<resources>
    <string name="app_name">SIMDORI</string>
    <string name="idText">아이디</string>
    <string name="pwText">비밀번호</string>
    <string name="idDes">아이디</string>
    <string name="pwDes">비밀번호</string>
    <string name="btnLogin">로그인</string>
    <string name="btnJoin">회원가입</string>
    <string name="home">홈</string>
    <string name="record">기록</string>
    <string name="setting">설정</string>
    <string name="bpm">BPM</string>
    <string name="sleep">SLEEP</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="naver_client_id">KdNUVYxu9X4QpHg8s8eD</string>
    <string name="naver_client_secret">a798KvMmAJ</string>
    <string name="naver_client_name">COOLCOOL</string>
    <string name="dash">-</string>
    <string name="Title_tv">와이플러그</string>
    <string name="Title_Device">장치</string>
    <string name="Title_User">사용자</string>
    <string name="Title_Group">그룹</string>
    <string name="Title_Setting">설정</string>
    <string name="goto_wifi">선택하신 WiFi 신호가 좋지 않아 직접 연결후 WiFi 세팅을 click해 주세요.</string>
    <string name="Btn_cancel">닫기</string>
    <string name="Btn_schedule_cancel">예약취소</string>
    <string name="Btn_confirm">확인</string>
    <string name="Btn_delete">삭제</string>
    <string name="Btn_skip">건너뛰기</string>
    <string name="Btn_reject">거절</string>
    <string name="Btn_accept">수락</string>
    <string name="Btn_shared">공유요청</string>
    <string name="Btn_retry">재시도</string>
    <string name="Btn_wifi">Wi-Fi 연결</string>
    <string name="Btn_scan">스캔</string>
    <string name="Btn_on">켜기</string>
    <string name="Btn_off">예약끄기</string>
    <string name="Btn_time">예약시간</string>
    <string name="Btn_show">보기</string>
    <string name="Menu_noti">설정할 항목 선택</string>
    <string name="Menu_FAIL">메뉴가 작동하지 않았습니다. \n 다시 시도하십시오.</string>
    <string name="Close_popup">종료</string>
    <string name="Close_noti">확인을 누르면 종료됩니다.</string>
    <string name="Logo_copyright">Copyright 2015 vitar.Co All Rights Reserved</string>
    <string name="Btn_Facebook_Login">페이스북 로그인</string>
    <string name="Btn_Facebook_Logout">페이스북 로그아웃</string>
    <string name="ID_hint">아이디</string>
    <string name="PW_hint">비밀번호</string>
    <string name="Mail_hint">이메일</string>
    <string name="Phone_hint">핸드폰</string>
    <string name="Required_Field">필수 입력사항</string>
    <string name="Optional_Field">선택 입력사항</string>
    <string name="Btn_id_check">ID 중복확인</string>
    <string name="Btn_password">비밀번호</string>
    <string name="Btn_pass_check">비밀번호 재입력</string>
    <string name="Btn_pass_check2">비밀번호\n재입력</string>
    <string name="Btn_mail_check">Email 중복확인</string>
    <string name="login_btn_pass_save">비밀번호저장</string>
    <string name="login_btn_auto_login">자동로그인</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_local">Wi-Fi 설정</string>
    <string name="login_btn_register">회원가입</string>
    <string name="login_btn_forgot">ID/PW 찾기</string>
    <string name="login_btn_id_serch">ID 찾기</string>
    <string name="login_btn_pass_serch">PW 찾기</string>
    <string name="register_title">회원가입</string>
    <string name="register_terms_all">약관에 모두 동의합니다.</string>
    <string name="register_terms_agreements">회원가입 약관에 동의합니다.</string>
    <string name="register_terms_agreements_Null">회원가입 약관에 동의하십시오.</string>
    <string name="register_terms_agreements_View">회원가입 약관을 확인하십시오.</string>
    <string name="register_terms_personal_View">개인정보취급방침을 확인하십시오.</string>
    <string name="register_terms_personal">개인정보취급방침 동의합니다.</string>
    <string name="register_terms_personal_Null">개인정보취급방침에 동의하십시오.</string>
    <string name="modify_title">정보수정</string>
    <string name="modify_Success">정보수정이 완료되었습니다.</string>
    <string name="modify_Secession">서비스 탈퇴</string>
    <string name="modify_Secession_popup">서비스를 탈퇴하시겠습니까?</string>
    <string name="modify_noti">이메일, 비밀번호를 변경할 수 있습니다.</string>
    <string name="group_Setting">그룹설정</string>
    <string name="group_Plus">그룹추가</string>
    <string name="group_Plus_Msg">그룹명을 입력하세요.</string>
    <string name="group_Plus_Noti">그룹을 선택해 주세요.</string>
    <string name="group_Save">그룹설정 저장</string>
    <string name="group_Save_Noti">그룹설정를 서버에 저장하거나,\n 가져와서 복원할 수 있습니다.</string>
    <string name="group_Save_Store">저장</string>
    <string name="group_Save_Store_Success">그룹설정을 서버에 저장하였습니다.</string>
    <string name="group_Save_Store_NoGroup">저장할 그룹이 없습니다.</string>
    <string name="group_Save_Restore_NoGroup">복원할 그룹이 없습니다.</string>
    <string name="group_Save_Restore_Success">그룹설정이 복원되었습니다.</string>
    <string name="group_Save_Restore">복원</string>
    <string name="group_Edit">그룹변경(삭제)</string>
    <string name="group_Edit2">그룹변경</string>
    <string name="group_Edit_Msg">변경할 그룹명을 입력하세요.</string>
    <string name="group_Delete">그룹삭제</string>
    <string name="group_Delete_Msg">선택한 그룹을 삭제하시겠습니까?</string>
    <string name="group_NoDevice">추가할 장치가 없습니다.</string>
    <string name="group_NoGroup">등록된 그룹이 없습니다.</string>
    <string name="group_NoOnlineDevice">설정할 수 있는 장치가 없습니다.</string>
    <string name="group_Same_Name">동일한 이름이 존재합니다.\n다른 이름을 입력하세요.</string>
    <string name="group_list_Baseline">더 이상 그룹을 추가할 수 없습니다.</string>
    <string name="group_list">그룹 목록</string>
    <string name="device_Plus">장치추가</string>
    <string name="device_Plus_Wifi">연결된 Wi-FI: </string>
    <string name="device_Plus_Length">simdori가 아닙니다.\n다시 선택해 주세요.</string>
    <string name="device_Plus_NoDevice">등록된 장치가 없습니다.\n장치를 추가해 주세요.</string>
    <string name="device_Plus_Same_Name">동일한 장치 이름이 존재합니다.\n 이름을 변경해주세요.</string>
    <string name="device_Status_ON">켜짐</string>
    <string name="device_Status_OFF">꺼짐</string>
    <string name="device_GPIO">전원 제어</string>
    <string name="device_GPIO_Status">장치가 꺼져 있습니다.\n장치를 확인해 주세요.</string>
    <string name="device_GPIO_On">장치가 켜졌습니다.</string>
    <string name="device_GPIO_Off">장치가 꺼졌습니다.</string>
    <string name="device_GPIO_FAIL">장치 과부하가 발생하였습니다. \n잠시 후 다시 시도하여 주십시오.</string>
    <string name="device_GPIO_Response">다른 플러그의 응답을 기다리고 있습니다.</string>
    <string name="device_Turn_On">의 전원을 켜시겠습니까?</string>
    <string name="device_Turn_Off">의 전원을 끄시겠습니까?</string>
    <string name="device_Socket">플러그</string>
    <string name="device_Socket_edit">소켓편집</string>
    <string name="device_Location">경기도 성남시 분당구 삼평동</string>
    <string name="device_Setting">장치설정</string>
    <string name="device_AIsetting">AI설정</string>
    <string name="device_AIsetting_Success">AI설정이 완료되었습니다. </string>
    <string name="device_AIsetting_Fail">AI설정이 실패하였습니다.</string>
    <string name="device_AIsetting_IN">IN</string>
    <string name="device_AIsetting_OUT">OUT</string>
    <string name="device_settopbox">셋탑박스</string>
    <string name="device_router">공유기</string>
    <string name="device_tv">tv</string>
    <string name="device_audio">오디오</string>
    <string name="device_cooker">전기밥솥</string>
    <string name="device_computer">컴퓨터</string>
    <string name="device_laptop">노트북</string>
    <string name="device_moniter">모니터</string>
    <string name="device_printer">프린터</string>
    <string name="device_refrigerator">냉장고</string>
    <string name="device_phone">전화기</string>
    <string name="device_microwave">전자레인지</string>
    <string name="device_lamp">전등</string>
    <string name="device_light">전구</string>
    <string name="device_default">기본</string>
    <string name="sensor_PowerConsumption">절감 사용량</string>
    <string name="sensor_PowerConsumption_summary">전력 사용량</string>
    <string name="sensor_PowerConsumption_graph">전력 그래프</string>
    <string name="sensor_PowerConsumption_daily">하루</string>
    <string name="sensor_PowerConsumption_weekly">주간</string>
    <string name="sensor_PowerConsumption_monthly">월간</string>
    <string name="sensor_PowerConsumption_day">하\n\n루</string>
    <string name="sensor_PowerConsumption_week">주\n\n간</string>
    <string name="sensor_PowerConsumption_month">월\n\n간</string>
    <string name="sensor_PowerConsumption_device">소켓명</string>
    <string name="sensor_PowerConsumption_usage">사용량</string>
    <string name="sensor_PowerConsumption_usage_Cost">사용 비용</string>
    <string name="sensor_PowerConsumption_usage_CO2">사용 CO2</string>
    <string name="sensor_PowerConsumption_saved">절감량</string>
    <string name="sensor_PowerConsumption_saved_Cost">절감 비용</string>
    <string name="sensor_PowerConsumption_saved_CO2">절감 CO2</string>
    <string name="sensor_PowerConsumption_total">총합</string>
    <string name="sensor_PowerConsumption_total_Cost">비용</string>
    <string name="sensor_PowerConsumption_total_Co2">CO2</string>
    <string name="sensor_PowerConsumption_used">절감량</string>
    <string name="sensor_PowerConsumption_average">평균</string>
    <string name="sensor_PowerConsumption_watt">0</string>
    <string name="sensor_PowerConsumption_baseline">(단위: kW, 원, lbs)</string>
    <string name="sensor_PowerConsumption_unit">단위: W</string>
    <string name="sensor_Environment">실시간 데이터</string>
    <string name="sensor_Environment_Temperature">N/A</string>
    <string name="sensor_Environment_Humidity">N/A</string>
    <string name="sensor_Environment_Indoor">실내공기</string>
    <string name="sensor_Environment_PPM">0 PPM</string>
    <string name="sensor_Environment_Good">좋음</string>
    <string name="sensor_Environment_Average">보통</string>
    <string name="sensor_Environment_Bad">나쁨</string>
    <string name="sensor_Settings">장치설정 및 정보</string>
    <string name="sensor_Environment_Location">경기도 성남시\n분당구 삼평동</string>
    <string name="sensor_Settings_NoAuth">설정권한이 없습니다.</string>
    <string name="sensor_Settings_NoPerson">권한 설정할 아이디를 선택하세요.</string>
    <string name="sensor_Settings_MasterPlug">마스터 플러그 설정</string>
    <string name="sensor_Settings_MasterPlug_Plug">플러그</string>
    <string name="sensor_Settings_MasterPlug_Master">주</string>
    <string name="sensor_Settings_MasterPlug_Slave">부</string>
    <string name="sensor_Settings_MasterPlug_Noti">마스터 플러그 설정 완료</string>
    <string name="sensor_Settings_MasterPlug_Change">기존의 마스터 플러그 설정이 변경되어 집니다.</string>
    <string name="sensor_Settings_MasterPlug_Not_Blocking">플러그 차단설정이 되어있습니다.\n차단 설정을 해제하고 시도하십시오.</string>
    <string name="sensor_Settings_SlavePlug">슬레이브 플러그 설정</string>
    <string name="sensor_Settings_StanbyPower">대기전력 차단 설정</string>
    <string name="sensor_Settings_StanbyPower_Selectiion">설정할 플러그를 선택하세요.</string>
    <string name="sensor_Settings_StanbyPower_Baseline">대기전력 기준치를 입력해주세요.</string>
    <string name="sensor_Settings_StanbyPower_Noti">대기전력 차단 설정이 완료되었습니다.</string>
    <string name="sensor_Settings_Plug_Blocker">플러그 차단 설정</string>
    <string name="dialog_message_reset">차단 설정을 하시면\nMaster, Slave 설정이\n초기화 됩니다. \n계속 하시겠습니까?</string>
    <string name="sensor_Settings_Plug_Blocker_Success">플러그 차단 설정 완료</string>
    <string name="sensor_Settings_Plug_Blocker_Push">차단 설정 플러그</string>
    <string name="sensor_Settings_Plug_Blocker_Not_Master">마스터 플러그 설정이 되어있습니다.\n설정을 해제하고 시도하십시오.</string>
    <string name="sensor_Settings_Plug_Blocker_Not_AI">AI설정이 되어있습니다.\n설정을 해제하고 시도하십시오.</string>
    <string name="sensor_Settings_Plug_Blocker_Not_GroupTime">예약설정된 장치가 있습니다.\n설정을 해제하고 시도하십시오.</string>
    <string name="sensor_Settings_Plug_Blocker_Not_SocketTime">예약설정된 플러그가 있습니다.\n설정을 해제하고 시도하십시오.</string>
    <string name="sensor_Settings_Reset">설정 초기화</string>
    <string name="sensor_Settings_Reset_Content">정말 리셋하시겠습니까?</string>
    <string name="sensor_Settings_Reset_Complete_msg">모든 세팅정보 리셋이 완료 되었습니다.</string>
    <string name="sensor_Settings_Permission">공유 권한 설정</string>
    <string name="sensor_Settings_Permission_Noti">공유 권한 설정이 완료되었습니다.</string>
    <string name="sensor_Settings_Permission_PlugControl">플러그 제어 권한</string>
    <string name="toast_id_null">아이디를 입력하세요.</string>
    <string name="toast_email_null">이메일을 입력하세요.</string>
</resources>